--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <div class="col-md-9 col-lg-7">
 
                                 <h2 class="display-4 text-white text-start">Support</h2>
-                                <div class="lead text-white text-start">If you have any questions, suggestions or, something to say, please email at <b><a href="mailto:contact.bnulo+nMore@gmail.com" target="_blank">contact.bnulo+nMore@gmail.com</a>.</b></div>
+                                <div class="lead text-white text-start">If you have any questions, suggestions or, something to say, please email at <b><a href="mailto:contact.bnulo+nmore@gmail.com" target="_blank">contact.bnulo+nmore@gmail.com</a>.</b></div>
                             </div>
                         </div>
                     </div>
