--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                                 <div class="col-3 col-md-2 bg-black text-center text-md-end pb-3">
                                     <img class="img-fluid" src="assets/img/nMore.png" alt="..." />
                                 </div>
-                                <h1 class="display-1 text-white text-center text-sm-end mb-3">nMore</h1>
-                                <div class="lead text-white text-center text-sm-end mb-4">Cats, Dogs, Riddles, nMore ...</div>
-                                <div class="text-center text-sm-end">
+                                <h1 class="display-1 text-white text-start mb-3">nMore</h1>
+                                <div class="lead text-white text-start mb-4">Cats, Dogs, Riddles, nMore ...</div>
+                                <div class="text-start text-sm-start">
                                     <a href="https://apps.apple.com/us/app/nmore/id1659936337" target="_blank"><img class="app-badge" src="assets/img/app-store-badge.svg" alt="..." /></a>
                                 </div>
                             </div>
